# bkmrx

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
apps/chrome-extension/: .gitignore  README.md  background.js  manifest.json
apps/chrome-extension/lib/: tagify.min.css  tagify.min.js
apps/chrome-extension/popup/: popup.css  popup.html  popup.js
apps/desktop/: README.md  package-lock.json  package.json  pnpm-lock.yaml
apps/desktop/docs/: backend-rebuild-plan.md  backend-rebuild-tasks.md
apps/desktop/docs/migration/: runbook.md
apps/desktop/src/: App.css  App.tsx  Navbar.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: api_docs.html  commands.rs  container.rs  database.rs  http_server.rs  legacy_migration.rs  lib.rs  main.rs  notes.rs  service.rs  settings.rs
apps/desktop/src-tauri/src/bookmarks/: mod.rs  model.rs  repository.rs  search.rs  transfer.rs
apps/desktop/src-tauri/src/notes/: mod.rs  model.rs  repository.rs  service.rs  watcher.rs
apps/desktop/src-tauri/src/settings/: mod.rs  model.rs  runtime.rs  store.rs
apps/desktop/src-tauri/tests/: database_repository.rs  http_api.rs  legacy_migration.rs  notes.rs  search_pagination.rs  settings.rs  transfer.rs
apps/desktop/src/bookmarks/: AddBookmarkDialog.tsx  BookmarkView.test.tsx  BookmarkView.tsx  DeleteBkDialog.tsx  EditBookmarkDialog.tsx  ResultList.test.tsx  (+6 more)
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_docs.html  bkmr.rs  commands.rs  http_server.rs  lib.rs  main.rs  notes.rs  settings.rs
src/components/: FolderTree.tsx  NoteEditor.tsx  NotesPanel.tsx  Pagination.tsx  ResultList.tsx  SearchBar.tsx  SettingsModal.tsx  SettingsPage.tsx  TagPanel.tsx
src/hooks/: useBkmr.ts  useNotes.ts  useSettings.ts
(+26 files in other folders)
