[package]
name = "bkmr-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "bkmr_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
 tauri = { version = "2", features = [] }
 chrono = "0.4"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
